# django-agora

./: .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  tox.ini
agora/: views.py
agora/templates/: index.html
